# cicd-python-flask

./: app.service  deploy.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
template/: home.html
templates/: home  home.html
